# musly

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CNAME  Doxyfile  README.md  about.html  config.h.in  documentation.html  index.html  methods.html  params.json
cmake/: FindLibAV.cmake
doc/: MIREX-DistanceMatrix.md  annotated.html  classes.html  dir_8d5c2f5333efee15c4ff88421fada498.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  musly_8h.html  musly_8h_source.html  musly__types_8h.html  musly__types_8h_source.html  structmusly__jukebox.html
doc/html/: annotated.html  classes.html  dir_8d5c2f5333efee15c4ff88421fada498.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  musly_8h.html  musly_8h_source.html  musly__types_8h.html  musly__types_8h_source.html  structmusly__jukebox.html
include/: CMakeLists.txt  minilog.h
include/musly/: musly.h  musly_types.h
js/highcharts-3.0.8/: highcharts-all.js
js/highcharts-3.0.8/adapters/: mootools-adapter.js  prototype-adapter.js  standalone-framework.js
js/highcharts-3.0.8/modules/: canvas-tools.js  no-data-to-display.js
libmusly/: CMakeLists.txt  decoder.cpp  decoder.h  discretecosinetransform.cpp  discretecosinetransform.h  gaussian.h  gaussianstatistics.cpp  gaussianstatistics.h  idpool.h  lib.cpp  melspectrum.cpp  melspectrum.h  method.cpp  method.h  mfcc.cpp  mfcc.h  mutualproximity.cpp  mutualproximity.h  plugins.cpp  plugins.h  powerspectrum.cpp  powerspectrum.h  resampler.cpp  resampler.h  windowfunction.cpp  windowfunction.h
libmusly/decoders/: libav.cpp  libav.h  libav_0_8.cpp  libav_0_8.h  libav_11_4.cpp  libav_11_4.h
libmusly/libresample/: CMakeLists.txt  config.h.in  resample.c  resample_defs.h
libmusly/methods/: mandelellis.cpp  mandelellis.h  timbre.cpp  timbre.h
musly/: CMakeLists.txt  collectionfile.cpp  collectionfile.h  fileiterator.cpp  fileiterator.h  main.cpp  programoptions.cpp  programoptions.h  tools.cpp  tools.h
test/: CMakeLists.txt  main.cpp
